[package]
name = "dilligent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
eyre = "0.6.11"
itertools = "0.12.1"
num_enum = "0.7.2"
zip = "0.6.6"
