[project]
name = "pickle-crawler"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andrew McHarg", email = "amcharg@gmail.com" }
]
dependencies = [
    "huggingface_hub>=0.20.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hello = "pickle_crawler:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pickle_crawler"]
